Embed the game in an iframe

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="content">
-      <div class="canvas"></div>
+      <iframe src="./game/game.html" class="canvas"></iframe>
       <div class="footer">
         <span class="text">View source on</span>
         <a class="link-button" link="github.com/TheNipanen/sakarin-villapaitapeli" href="https://github.com/TheNipanen/sakarin-villapaitapeli">
